--- a/src/App.css
+++ b/src/App.css
@@ -1,38 +1,203 @@
-.App {
-  text-align: center;
+body {
+    margin: 0;
+    padding: 0;
+    box-sizing: border-box;
 }
 
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
+#root {
+    height: 100vh;
+    width: 100vw;
+    height: 100vh;
+    background-color: #68bbfd;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    font-family: 'Inter', sans-serif;
+    color: #fff;
 }
 
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
+.container {
+    background-color: #212843;
+    width: 400px;
+    display: flex;
+    justify-content: space-between;
+    padding: 15px;
+    border-radius: 15px;
+    box-shadow: 7px 10px 20px rgba(0, 0, 0, 0.5);
 }
 
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
+.container h1 {
+    margin: 0;
+    margin-bottom: 5px;
+    font-weight: 300;
 }
 
-.App-link {
-  color: #61dafb;
+.container h4 {
+    margin: 0;
+    font-weight: 300;
 }
 
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+.answers {
+    display: flex;
+    flex-direction: column;
+    align-items: flex-end;
+}
+
+.answers button,
+.container-win button {
+    width: 160px;
+    text-align: left;
+    margin: 5px 0;
+    background-color: #212944;
+    border: 3px solid #223a5a;
+    border-radius: 10px;
+    color: #fff;
+    padding: 3px;
+    font-family: inherit;
+    cursor: pointer;
+    transition: all ease 0.1s;
+}
+
+.answers button:active,
+.container-win button:active {
+    background-color: #223a5a;
+}
+
+.container-win {
+    background-color: #212843;
+    width: 500px;
+    height: 200px;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    border-radius: 15px;
+    box-shadow: 7px 10px 20px rgba(0, 0, 0, 0.5);
+}
+
+.container-win h1 {
+    text-align: center;
+}
+
+.container-win button {
+    text-align: center;
+    font-size: 20px;
+}
+
+footer {
+    position: fixed;
+    bottom: 50px;
+    left: 0;
+    right: 0;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    margin-top: auto;
+}
+
+footer small {
+    font-size: 15px;
+    color: #212843;
+}
+
+footer .socials {
+    width: 250px;
+    margin-top: 15px;
+    display: flex;
+    justify-content: space-evenly;
+}
+
+footer .socials a {
+    font-size: 30px;
+    text-decoration: none;
+    color: #212843;
+}
+
+@media screen and (max-width: 820px) {
+    .container {
+        flex-direction: column;
+        width: 80%;
+    }
+
+    .container h1 {
+        font-size: clamp(3rem, 5vw, 2rem);
+    }
+
+    .container h4 {
+        text-align: center;
+    }
+
+    .questions {
+        display: flex;
+        flex-direction: column;
+        align-items: center;
+    }
+
+    .answers {
+        align-items: center;
+        margin: 30px 0;
+    }
+
+    .answers button {
+        width: 60%;
+        text-align: center;
+        padding: 10px;
+        font-size: 15px;
+    }
+}
+
+@media screen and (max-width: 414px) {
+    footer small {
+        font-size: 18px;
+    }
+
+    footer .socials a {
+        font-size: 40px;
+    }
+
+    .container-win {
+        width: 360px;
+    }
+}
+
+@media screen and (max-width: 375px) {
+    footer {
+        bottom: 30px;
+    }
+
+    footer small {
+        font-size: 15px;
+    }
+
+    footer .socials a {
+        font-size: 30px;
+    }
+
+    .container-win {
+        width: 340px;
+    }
+}
+
+@media screen and (max-width: 280px) {
+    footer {
+        bottom: 20px;
+    }
+
+    .answers button {
+        padding: 5px;
+    }
+
+    .container-win {
+        width: 240px;
+    }
+
+    .container-win h1 {
+        font-size: 20px;
+    }
+
+    .container-win button {
+        margin-top: 10px;
+        font-size: 15px;
+    }
 }
